tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__HelloBaronHowsYo-AAAAAAAAAAAAAAAAAAACIg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 546,
  "prerequisites": [
    93
  ],
  "properties": {
    "auto_claim": false,
    "desc": "During your travels you may have seen some huge oil spouts. Now's the time to make a pump and go collect this black gold into tanks. Oil can be burned directly in a combustion generator (onsite to power the pump, perhaps?) or be refined for better fuels and crafting materials.\n\nBring a generator or battery buffer (with full batteries obviously) with you to power the pump. Thanks to the advancement of technology the pump can auto output on top. Stacking multiple pumps makes them work faster. In that case, oil has to be removed from the bottom of the stack using a pump cover or other means like a conduit.\n\nTaller spouts have more oil. But for the LV pump, it's better to use the short spouts if possible since it doesn't have enough range to fully collect the larger ones in the horizontal range. Save the taller spouts for MV or HV pumps.\n\nMining pipes are needed for pumping the oil, same as the auto miner. When it hits the bottom (or something in the way), if there's no fluid left to collect, it will start retracting the pipes. Same thing if you disable it with a soft mallet. You can also change the range with a screwdriver if there's a reason to do that, like collecting lava in a limited area faster.\n\nThese are GT machines, so remember to protect them (and their power sources!) from rain on all sides. And set a waypoint with JourneyMaps so you don't forget where you placed it!\n\n[note]Once you run out of surface oil, you'll want to turn to:\n1) Oilsands ore, though this is better suited for making heavy oil\n2) Making oil from logs in a pyrolyze oven\n4) Bacterial Vat (EV+)\n5) Crops\n6) Bees\n7) Underground (UG) oil. Dimensions generally have a couple fluids that can be accessed with a multiblock version of the pump, available in MV+[/note]\n\n[note]Heavy oil cannot be used until MV for anything except lubricant and burning in semifluid generator since it requires MV distillery.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lHello Baron, How's Your Black Gold Today?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    93
  ],
  "rewards": [],
  "tasks": []
}
