tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__HighEnergyLaserP-WqDynhbQQ4GdNMKm0BlbcQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1643888088811395953,
  "prerequisites": [
    14257623610933504700
  ],
  "properties": {
    "auto_claim": false,
    "desc": "For even more pure water, you will need to use strong lasers to precisely bombard the water and remove impurities. As usual with the waterline, this multiblock presents you with a complex automation puzzle to solve.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "High Energy Laser Purification",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    14257623610933504700
  ],
  "rewards": [],
  "tasks": []
}
