tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__HighTemperatureS-AAAAAAAAAAAAAAAAAAAMbg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3182,
  "prerequisites": [
    3180
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Have you heard of pebble reactors?\n\nIt's called the High Temperature Gas-cooled Reactor (HTGR), and it uses fuel pebbles and consumes power. However, it doesn't really make a lot of power, and doesn't even match the EU/t of THTR, despite being much more expensive. The multiblock structure is basically the same, a huge reactor around 12x12x12 blocks in size, with 500+ casings made with Europium. What it doesn't make in power, it compensates in breeding, however.\n\nFor the unaware, this is expensive. Pebble reactors work by stuffing the reactor absolutely full of pebbles, and then the reaction will keep going for, essentially, forever. In this case, you will have a fully automated source of almost endless Lutetium, Plutonium and other things that will be explained in the following quests, alongside the production of fuel and the processing of outputs. What this means is that this is an expensive multiblock, but it's placed at a tier in which this expense is actually reasonable, if there is a need for immense, endless breeding of many outputs.\n\nIf you're on the fence about building this, check the next quests to learn more about the fuel and outputs.\n\nNotes:\n\nHTGR has an internal buffer for fuel and only one input bus is required (any will do), as well as only one output bus (reactor automatically compresses every 64 burned pellets into one ball, so you need 6 slots or more to avoid problems with voiding at full capacity).\n\nReactor requires only 72k out of 720k pebbles to operate, but running at minimum capacity means that you will not get any bonuses, such as lower recipe time and higher amount of pebbles processed per cycle.\n\nThis multi consumes 1A LuV when operating, no matter how many pebbles are inside, but it also generates Hot Coolant as it runs. If you use it to generate power, you will gain more EU than is consumed by the reactor.\n\nIn this reactor, the throughput increases with the amount of pebbles put into it.\n\nBy typing HTGR in NEI, you can see all the items that are related to this multiblock.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lHigh Temperature Super Breeder",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3180
  ],
  "rewards": [],
  "tasks": []
}
