tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__HowtheHeckDoIFin-AAAAAAAAAAAAAAAAAAAF2A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1496,
  "prerequisites": [
    28
  ],
  "properties": {
    "auto_claim": false,
    "desc": "GregTech ore generation is based on veins. Veins have a fixed height and a rectangular base.\n\nThere is a vein every 3 chunks in x and z direction. The veins typically extend into the neighboring chunks and have varying forms. The center point however is very regular. It is based on the chunk number. Look at upper left of the screen to find the chunk number. This info is displayed by InGame Info XML mod. For now, you need to see chunk info like \"Chunk X: 3 Z: -2\".\n\nThe 3,-2 is the chunk's address. The ore centers are located at chunk numbers of the form 3N+1 for both x and z. So, 4,7 is an ore center, as well as 10,16, -23,19, and so on. If you are in the right spot InGame Info will also say that \"This is an ore chunk.\".\n\nAnother useful tool is the NEI ore vein overlay which you activate by pressing F9 three times. It shows the 3x3 areas and marks the center blue.\n\nThe generation of Ore Chunks is not related to biomes.\n\nFor reading all the way, here's some iron.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lHow the Heck Do I Find Ores?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    28
  ],
  "rewards": [],
  "tasks": []
}
