tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__HydrogenMethaneo-AAAAAAAAAAAAAAAAAAACFQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 533,
  "prerequisites": [
    95
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Some centrifugal processes leave gases behind like Hydrogen or Methane. Centrifuge some Brown and Yellow Limonite to get Hydrogen or dump your unused food in a Centrifuge to get Methane gas. Wood will even give 60 mb per log, and many other crops will also generate Methane this way.\n\nThe main powergen line that uses this generator is Benzene, but that needs MV tier.\n\nIf you're dealing with fully renewable powergen, this is the type of generator you'll use the most.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lHydrogen, Methane or Some Farts... (Natural gas) ",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    95
  ],
  "rewards": [],
  "tasks": []
}
