tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__HypogenCoilUpgra-AAAAAAAAAAAAAAAAAAAMkg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3218,
  "prerequisites": [
    3217,
    15163415207241773729
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Forged from the blood of an ageless dragon, and melded together by the power of fusion beyond what you thought was the reality. No natural element, or combination of elements, could match up to this glowing orange material, not even the Awakened Draconium you got your hands on before.\n\nWhat truly happened inside that Mk4 Fusion Reactor? What §ois§r this material? Its dust pulsates visibly, at different rates depending on the size of the dust itself. Hypogen approaches a state of complete balance as it approaches the block size, and it is obvious to you what needs to be done with it.\n\nIt absorbs and radiates energy without any effort, but it would be stupid to attempt making coils out of this without assistance. Wetware wasn't good enough anymore, and only the most advanced living circuit could withstand the erratic behavior Hypogen demonstrates.\n\nProvides 12601K heat. Almost certainly, this will end up on your DTPF.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lHypogen Coil Upgrade",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3217,
    15163415207241773729
  ],
  "rewards": [],
  "tasks": []
}
